force-app/main/default/objects/sugati__SupplierBookingImage__c/sugati__SupplierBookingImage__c.object-meta.xml
<CustomObject>
    <label>SupplierBookingImage</label>
    <nameField>
        <displayFormat>SBI-{0000000000}</displayFormat>
        <label>SupplierBookingImage ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SupplierBookingImages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>