force-app/main/default/objects/sugati__SupplierBookingImage__c/fields/sugati__S_SBI_Filename__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SBI_Filename__c</fullName>
    <label>Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>