force-app/main/default/objects/sugati__SupplierBookingImage__c/fields/sugati__S_SBI_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SBI_Image_URL__c</fullName>
    <description>The URL needed to display the image</description>
    <formula>IF( 
	NOT(ISBLANK(sugati__SBI_External_Image_URL__c )), 
	sugati__SBI_External_Image_URL__c, 
	IF(
		CONTAINS(TEXT($Profile.UserType), &apos;Partner&apos;), 
		IF(
			sugati__S_SBI_Is_File__c,
			BLANKVALUE($Setup.sugati__Site__c.sugati__Content_Host_Name__c, &apos;&apos;) &amp; &apos;/sfc/servlet.shepherd/version/download/&apos; &amp; sugati__SBI_Attachement_Id__c,
			BLANKVALUE($Setup.sugati__Site__c.sugati__Content_Host_Name__c, &apos;&apos;) &amp; &apos;/servlet/servlet.FileDownload?file=&apos; &amp; sugati__SBI_Attachement_Id__c
		),
		IF(
			sugati__S_SBI_Is_File__c,
			&apos;/sfc/servlet.shepherd/version/download/&apos; &amp; sugati__SBI_Attachement_Id__c,
			&apos;/servlet/servlet.FileDownload?file=&apos; &amp; sugati__SBI_Attachement_Id__c
		)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The URL needed to display the image</inlineHelpText>
    <label>Image URL</label>
    <type>Text</type>
</CustomField>