force-app/main/default/objects/sugati__SupplierBookingImage__c/fields/sugati__S_SBI_Is_File__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_SBI_Is_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this SupplierBookingImage points to a File (ContentDocument), otherwise it is an attachment.</description>
    <inlineHelpText>If checked, this SupplierBookingImage points to a File (ContentDocument), otherwise it is an attachment.</inlineHelpText>
    <label>Is File</label>
    <type>Checkbox</type>
</CustomField>