force-app/main/default/objects/sugati__SupplierBookingImage__c/fields/sugati__SBI_External_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBI_External_Image_URL__c</fullName>
    <label>External Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>