force-app/main/default/objects/sugati__SupplierBookingImage__c/fields/sugati__SBI_Image__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBI_Image__c</fullName>
    <formula>IMAGE(sugati__S_SBI_Image_URL__c, &apos;&apos;, 70, 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>