force-app/main/default/objects/sugati__SupplierBookingImage__c/fields/sugati__SBI_Is_External_Image__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBI_Is_External_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External Image</label>
    <type>Checkbox</type>
</CustomField>