force-app/main/default/objects/sugati__SupplierBookingImage__c/fields/sugati__SBI_Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBI_Supplier_Booking__c</fullName>
    <label>Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>SupplierBookingImages</relationshipLabel>
    <relationshipName>SupplierBookingImages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>