force-app/main/default/objects/sugati__SupplierBookingImage__c/fields/sugati__SBI_Used_In_Travel_App__c.field-meta.xml
<CustomField>
    <fullName>sugati__SBI_Used_In_Travel_App__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Image is being used in a travel app.</inlineHelpText>
    <label>Used In Travel App</label>
    <type>Checkbox</type>
</CustomField>